resources/assets/sass/main.scss
@import "~bootstrap/scss/functions";
@import "variables";

@import url("https://fonts.googleapis.com/css?family=Raleway:300|Roboto+Slab:300");

body {
    position: relative;

    width: 100%;
    height: 100%;

    color: white;
}

html {
    width: 100%;
    height: 100%;
}

body, html {
    background: url('../img/black-orchid.png') #222;
}

#app {
    height: 100%;
    width: 100%;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    margin: 0 0 35px;

    letter-spacing: 1px;
}

p {
    font-size: 16px;
    line-height: 1.5;

    margin: 0 0 25px;
    @media(min-width: 768px) {
        font-size: 18px;
        line-height: 1.6;

        margin: 0 0 35px;
    }
}

a {
    transition: all 0.2s ease-in-out;

    color: $primary;
    &:focus,
    &:hover {
        text-decoration: none;

        color: lighten($primary, 20%);
    }
}

#mainNav {
    margin-bottom: 0;

    border-bottom: 1px solid fade-out(white, .7);
    background-color: black;

    @supports ((-webkit-backdrop-filter: blur(10px)) or (backdrop-filter: blur(10px))) {
        background-color: rgba(0, 0, 0, 0.25);
        backdrop-filter: blur(10px);
    }

    .navbar-toggler {
        font-size: 14px;

        padding: 11px;

        color: white;
        border: 1px solid white;
    }
    .navbar-brand {
        font-family: $font-family-serif;
        font-weight: $font-weight-light;

        &:hover {
            color: $white;
        }
    }
    a {
        color: $gray-400;
    }
    .navbar-nav {
        .nav-item {
            margin: auto 10px;

            a {
                &:hover,
               &.active {
                    color: $white;
                }
            }
        }
    }
    @media(min-width:992px) {
        padding-top: 20px;
        padding-bottom: 20px;

        transition: background 0.3s ease-in-out, padding-top 0.3s ease-in-out, padding-bottom 0.3s;
        letter-spacing: 1px;

        border-bottom: none;
        background: transparent;
        &.navbar-shrink {
            padding-top: 10px;
            padding-bottom: 10px;

            border-bottom: 1px solid fade-out(white, .7);

            @supports ((-webkit-backdrop-filter: blur(10px)) or (backdrop-filter: blur(10px))) {
                background: transparent;
                backdrop-filter: blur(10px);
            }
            background: rgba(0, 0, 0, 0.75);
        }
        .nav-link.active {
            outline: none;
            background-color: rgba(white, .3);
            &:hover {
                color: white;
            }
        }
    }
}

.masthead {
    display: table;

    width: 100%;
    height: 100%;
    padding: 200px 0;

    text-align: center;

    color: white;
    background-color: black;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    .intro-bg {
        background: #000 no-repeat bottom center scroll;
        background-color: black;
        background-size: cover;
        float: left;
        position: absolute;
        left: 0;
        top: 0;
        width: 100%;
        height: 100%;
        opacity: 0;
        transition: opacity 0.5s ease-in-out;
    }
    .intro-body {
        display: table-cell;

        vertical-align: middle;
        .brand-heading {
            font-size: 50px;
        }
        .intro-text {
            font-size: 18px;
        }
    }
    @media(min-width:768px) {
        padding: 0;
        .intro-body {
            .brand-heading {
                font-size: 100px;
            }
            .intro-text {
                font-size: 22px;
            }
        }
    }
}

.btn-circle {
    transition: background 0.3s ease-out;

    color: white;
    &:focus,
    &:hover {
        color: $primary;
    }
}

.content-section {
    padding-top: 150px;
    padding-bottom: 150px;
}

.download-section {
    color: white;
    background-color: black;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}

#map {
    width: 100%;
    height: 300px;
}
@media(min-width:992px) {
    .content-section {
        padding-top: 200px;
        padding-bottom: 200px;
    }
    #map {
        height: 350px;
    }
}

.btn {
    font-weight: 400;

    transition: all 0.3s ease-out;

    border-radius: 0;
}

.btn-default {
    color: $primary;
    border: 1px solid $primary;
    background-color: transparent;
    &:focus,
    &:hover {
        color: black;
        border: 1px solid $primary;
        outline: none;
        background-color: $primary;
    }
}

ul.banner-social-buttons {
    margin-top: 0;
    @media(max-width: 1199px) {
        margin-top: 15px;
    }
    @media(max-width:767px) {
        li {
            display: block;

            margin-bottom: 20px;
            padding: 0;
            &:last-child {
                margin-bottom: 0;
            }
        }
    }
}

footer {
    padding: 50px 0;
    p {
        font-size: 14px;

        margin: 0;
    }
}

::-moz-selection {
    background: #fcfcfc;
    background: fade-out(white, .8);
    text-shadow: none;
}

::selection {
    background: #fcfcfc;
    background: fade-out(white, .8);
    text-shadow: none;
}

img::selection {
    background: transparent;
}

img::-moz-selection {
    background: transparent;
}

body {
    -webkit-tap-highlight-color: fade-out(white, .8);
}

.fade-enter-active, .fade-leave-active {
    transition: opacity 0.2s cubic-bezier(0.215, 0.61, 0.355, 1), margin 0.2s cubic-bezier(0.215, 0.61, 0.355, 1);
}
.fade-enter, .fade-leave-active {
    opacity: 0
}
.fade-enter {
    margin-top: -50px;
}

#skills {
    .list-group .list-group-item {
        background-color: transparent;
        border: none;
        text-align: left;
    }

    .ability-score {
        float: right;
    }

    .fa-star {
        color: $primary;
        opacity: 1;
    }
    .fa-star.empty {
        color: #fff;
        opacity: 0.15;
    }
}

